# pretix-szamlazz

./: .update-locales.sh  .xsdata.xml  LICENSE  MANIFEST.in  Makefile  README.rst  default.nix  pretixplugin.toml  pyproject.toml  response.xml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_szamlazz/: apps.py  signals.py  szamlazz.py
pretix_szamlazz/locale/de_Informal/LC_MESSAGES/: django.po
pretix_szamlazz/szamlazz_types/: __init__.py  szamla.py  szamla_letrehozas.py  szamla_letrehozas_valasz.py  szamla_sztorno.py  szamla_xml_lekeres.py
typings/pretix/base/: models.pyi  signals.pyi
xsd/: szamla-letrehozas-valasz.xsd  szamla-letrehozas.xsd  szamla-sztorno.xsd  szamla-xml-lekeres.xsd  szamla.xsd
