[project]
name = "pretix-szamlazz"
dynamic = ["version"]
description = "Szamlazz.hu integration for Pretix"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Patrick Chilton", email = "chpatrick@gmail.com"},
]
maintainers = [
    {name = "Patrick Chilton", email = "chpatrick@gmail.com"},
]

dependencies = [
    "xsdata",
    "requests",
]

[project.entry-points."pretix.plugin"]
pretix_szamlazz = "pretix_szamlazz:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/chpatrick/pretix-szamlazz"
repository = "https://github.com/chpatrick/pretix-szamlazz"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_szamlazz.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false

[tool.basedpyright]
reportUnknownMemberType = false